# MoodifyTunes

./: .dockerignore  .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt
moodifytunes/: spotify_api.py  tracks_rules.py
moodifytunes/static/: style.css  style_login.css
moodifytunes/templates/: callback.html  divided_tracks.html  index.html  playlists.html  track_features.html  tracks.html
