[tool.poetry]
name = "moodifytunes"
version = "0.1.0"
description = ""
authors = ["weibik <j-szkola@wp.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
spotipy = "^2.23.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
